--- a/site/module3-solution/index.html
+++ b/site/module3-solution/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
 <body>
-  <nav id="header-nav" class="navbar navbar-default">
+  <nav id="header-nav" class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
