test nav menu auto collape

--- a/site/module3-solution/index.html
+++ b/site/module3-solution/index.html
@@ -26,11 +26,11 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div id="collapsable-nav" class="collapse navbar-collapse">
         <ul id="nav-list" class="nav navbar-nav visible-xs-block">
-          <li><a href="#chicken">Chicken</a></li>
+          <li><a data-toggle="collapse" data-target="#collapsable-nav" href="#chicken">Chicken</a></li>
           <li role="separator" class="divider"></li>
-          <li><a href="#beef">Beef</a></li>
+          <li><a data-toggle="collapse" data-target="#collapsable-nav" href="#beef">Beef</a></li>
           <li role="separator" class="divider"></li>
-          <li><a href="#sushi">Sushi</a></li>
+          <li><a data-toggle="collapse" data-target="#collapsable-nav" href="#sushi">Sushi</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
