--- a/site/module3-solution/index.html
+++ b/site/module3-solution/index.html
@@ -26,7 +26,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div id="collapsable-nav" class="collapse navbar-collapse">
         <ul id="nav-list" class="nav navbar-nav visible-xs-block">
-          <li><a data-toggle="collapse" data-target="#collapsable-nav" href="#chicken">Chicken</a></li>
+          <li><a data-toggle="collapse" data-target="#collapsable-nav" href="#top">Chicken</a></li>
           <li role="separator" class="divider"></li>
           <li><a data-toggle="collapse" data-target="#collapsable-nav" href="#beef">Beef</a></li>
           <li role="separator" class="divider"></li>
